--- a/src/main/Port.Adapter/In/Api/In.Api.csproj
+++ b/src/main/Port.Adapter/In/Api/In.Api.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="ei8.Data.ExternalReference.Port.Adapter.In.InProcess" Version="0.1.0" />
     <PackageReference Include="ei8.Data.Tag.Common" Version="0.1.3" />
     <PackageReference Include="ei8.Data.Tag.Port.Adapter.In.InProcess" Version="0.1.11" />
-    <PackageReference Include="ei8.EventSourcing.Client" Version="0.2.9" />
+    <PackageReference Include="ei8.EventSourcing.Client" Version="0.2.10" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Owin" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
     <ProjectReference Include="..\..\Common\Common.csproj" />
+    <ProjectReference Include="..\..\IO\Persistence\Remote\Remote.csproj" />
     <ProjectReference Include="..\..\IO\Process\Services\Services.csproj" />
   </ItemGroup>
 </Project>
