--- a/src/var1.env
+++ b/src/var1.env
@@ -3,5 +3,5 @@ EVENT_SOURCING_IN_BASE_URL=http://eventsourcing.in.api:80
 EVENT_SOURCING_OUT_BASE_URL=http://eventsourcing.out.api:80
 IDENTITY_ACCESS_IN_BASE_URL=http://cortex.identityaccess.in.api:80
 IDENTITY_ACCESS_OUT_BASE_URL=http://cortex.identityaccess.out.api:80
-SUBSCRIPTIONS_IN_BASE_URL=http://cortex.subscriptions.in.api:80
-SUBSCRIPTIONS_OUT_BASE_URL=http://cortex.subscriptions.out.api:80
+INSTANTIATES_MESSAGE_EXTERNAL_REFERENCE_URL=https://neurul.net/ei8/cortex/neurons/6a033c22-3018-439c-9e82-99f695a83dc5
+PAGE_SIZE=10
