--- a/src/var1.env
+++ b/src/var1.env
@@ -1,4 +1,4 @@
-CORTEX_GRAPH_OUT_BASE_URL=http://cortex.graph.out.api:80
+CORTEX_LIBRARY_OUT_BASE_URL=http://cortex.library.out.api:80
 EVENT_SOURCING_IN_BASE_URL=http://eventsourcing.in.api:80
 EVENT_SOURCING_OUT_BASE_URL=http://eventsourcing.out.api:80
 IDENTITY_ACCESS_IN_BASE_URL=http://cortex.identityaccess.in.api:80
