Added settings.json, Identity classes, and httpclients.

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -6,11 +6,15 @@ services:
       - ./var1.env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./customsettings.json:/app/appsettings.json
   cortex.chat.nucleus.out.api:
     env_file: 
       - ./var1.env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./customsettings.json:/app/appsettings.json
 networks:
     default:
         external:
