--- a/src/main/Port.Adapter/IO/Persistence/Remote/Remote.csproj
+++ b/src/main/Port.Adapter/IO/Persistence/Remote/Remote.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.0" />
-    <PackageReference Include="ei8.Cortex.Chat.Nucleus.Client" Version="0.1.7" />
+    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.1" />
+    <PackageReference Include="ei8.Cortex.Chat.Nucleus.Client" Version="0.2.4" />
+    <PackageReference Include="ei8.Cortex.IdentityAccess.Client" Version="0.2.2" />
     <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.3" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
