Refactored and renamed components.

--- a/src/main/Port.Adapter/IO/Persistence/Remote/Remote.csproj
+++ b/src/main/Port.Adapter/IO/Persistence/Remote/Remote.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\..\ei8-cortex-coding-d23\src\main\d23.csproj" />
+    <ProjectReference Include="..\..\..\..\..\..\..\ei8-cortex-coding\src\main\Coding.csproj" />
     <ProjectReference Include="..\..\..\..\Application\Application.csproj" />
     <ProjectReference Include="..\..\..\..\Domain.Model\Domain.Model.csproj" />
   </ItemGroup>
