--- a/src/main/Application/Application.csproj
+++ b/src/main/Application/Application.csproj
@@ -9,7 +9,8 @@
   <ItemGroup>
     <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.1" />
     <PackageReference Include="ei8.Cortex.IdentityAccess.Client" Version="0.2.2" />
-    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.10" />
+    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.11" />
+    <PackageReference Include="ei8.Cortex.Library.Common" Version="0.3.7" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Client" Version="0.1.7" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Common" Version="0.1.6" />
     <PackageReference Include="ei8.Data.Aggregate.Port.Adapter.In.InProcess" Version="0.1.4" />
