--- a/src/main/Port.Adapter/IO/Process/Services/Services.csproj
+++ b/src/main/Port.Adapter/IO/Process/Services/Services.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.10" />
+    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.11" />
+    <PackageReference Include="ei8.Cortex.Library.Common" Version="0.3.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
   </ItemGroup>
