--- a/src/var1.env
+++ b/src/var1.env
@@ -4,3 +4,4 @@ EVENT_SOURCING_OUT_BASE_URL=http://eventsourcing.out.api:80
 IDENTITY_ACCESS_IN_BASE_URL=http://cortex.identityaccess.in.api:80
 IDENTITY_ACCESS_OUT_BASE_URL=http://cortex.identityaccess.out.api:80
 PAGE_SIZE=10
+QUERY_RESULT_LIMIT=3
