--- a/src/main/Application/Application.csproj
+++ b/src/main/Application/Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.1" />
+    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.3" />
     <PackageReference Include="ei8.Cortex.IdentityAccess.Client" Version="0.2.2" />
     <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.15" />
     <PackageReference Include="ei8.Cortex.Library.Common" Version="0.3.11" />
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\cortex-coding-persistence\src\main\Coding.Persistence.csproj" />
     <ProjectReference Include="..\Domain.Model\Domain.Model.csproj" />
   </ItemGroup>
 
