--- a/src/main/Domain.Model/Domain.Model.csproj
+++ b/src/main/Domain.Model/Domain.Model.csproj
@@ -8,11 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.3" />
+    <PackageReference Include="ei8.Cortex.Coding" Version="0.0.6" />
     <PackageReference Include="Neurul.Common" Version="0.1.19" />
-    <ProjectReference Include="..\..\..\..\cortex-coding\src\main\Coding.csproj" />
-    <Reference Include="System.ComponentModel.DataAnnotations">
-      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\System.ComponentModel.DataAnnotations.dll</HintPath>
-    </Reference>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 
