--- a/src/main/Port.Adapter/Common/Common.csproj
+++ b/src/main/Port.Adapter/Common/Common.csproj
@@ -8,14 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="CqrsLite" Version="0.18.1" />
+    <PackageReference Include="ei8.Cortex.Coding.d23" Version="0.0.5" />
+    <PackageReference Include="ei8.Cortex.Coding.d23.neurULization.Persistence" Version="0.0.9" />
     <PackageReference Include="ei8.EventSourcing.Client" Version="0.2.12" />
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\cortex-coding-d23-neurULization-persistence\src\main\d23.neurULization.Persistence.csproj" />
-    <ProjectReference Include="..\..\..\..\..\cortex-coding-persistence\src\main\Coding.Persistence.csproj" />
     <ProjectReference Include="..\..\Application\Application.csproj" />
+    <ProjectReference Include="..\IO\Persistence\Remote\Remote.csproj" />
   </ItemGroup>
 
   <ItemGroup>
