--- a/src/main/Port.Adapter/In/Api/In.Api.csproj
+++ b/src/main/Port.Adapter/In/Api/In.Api.csproj
@@ -12,7 +12,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CqrsLite" Version="0.18.1" />
-    <PackageReference Include="ei8.Cortex.Subscriptions.Client" Version="0.1.7" />
+    <PackageReference Include="ei8.Cortex.Coding" Version="0.0.6" />
+    <PackageReference Include="ei8.Cortex.Coding.d23" Version="0.0.5" />
+    <PackageReference Include="ei8.Cortex.Coding.d23.neurULization.Persistence" Version="0.0.9" />
+    <PackageReference Include="ei8.Cortex.Coding.Persistence" Version="0.0.11" />
+    <PackageReference Include="ei8.Cortex.Subscriptions.Client" Version="0.1.8" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Common" Version="0.1.6" />
     <PackageReference Include="ei8.Data.Aggregate.Common" Version="0.1.1" />
     <PackageReference Include="ei8.Data.Aggregate.Port.Adapter.In.InProcess" Version="0.1.4" />
@@ -21,6 +25,9 @@
     <PackageReference Include="ei8.Data.Tag.Common" Version="0.1.3" />
     <PackageReference Include="ei8.Data.Tag.Port.Adapter.In.InProcess" Version="0.1.11" />
     <PackageReference Include="ei8.EventSourcing.Client" Version="0.2.12" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection" Version="0.0.3" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization.Persistence" Version="0.0.2" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.Persistence" Version="0.0.5" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Owin" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
@@ -33,7 +40,6 @@
     <PackageReference Include="neurUL.Common.Api" Version="0.1.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\cortex-coding\src\main\Coding.csproj" />
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
     <ProjectReference Include="..\..\Common\Common.csproj" />
     <ProjectReference Include="..\..\IO\Persistence\Remote\Remote.csproj" />
