--- a/src/var1.env
+++ b/src/var1.env
@@ -5,4 +5,5 @@ IDENTITY_ACCESS_IN_BASE_URL=http://cortex.identityaccess.in.api:80
 IDENTITY_ACCESS_OUT_BASE_URL=http://cortex.identityaccess.out.api:80
 PAGE_SIZE=10
 QUERY_RESULT_LIMIT=10
-APP_USER_ID=
+APP_USER_ID=Author
+CREATE_EXTERNAL_REFERENCES_IF_NOT_FOUND=True
