--- a/src/main/Domain.Model/Domain.Model.csproj
+++ b/src/main/Domain.Model/Domain.Model.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.3" />
-    <PackageReference Include="ei8.Cortex.Coding" Version="0.0.6" />
+    <PackageReference Include="ei8.Cortex.Coding" Version="0.0.8" />
+    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.16" />
     <PackageReference Include="Neurul.Common" Version="0.1.19" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
