--- a/src/main/Port.Adapter/In/Api/In.Api.csproj
+++ b/src/main/Port.Adapter/In/Api/In.Api.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>ei8.Cortex.Chat.Nucleus.Port.Adapter.In.Api</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -9,13 +9,15 @@
     <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
+	 <!--INITAVATAR-->
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CqrsLite" Version="0.18.1" />
-    <PackageReference Include="ei8.Cortex.Coding" Version="0.0.6" />
-    <PackageReference Include="ei8.Cortex.Coding.d23" Version="0.0.5" />
-    <PackageReference Include="ei8.Cortex.Coding.d23.neurULization.Persistence" Version="0.0.9" />
-    <PackageReference Include="ei8.Cortex.Coding.Persistence" Version="0.0.11" />
+    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.4" />
+    <PackageReference Include="ei8.Cortex.Coding.d23.neurULization.Persistence" Version="0.0.11" />
+    <PackageReference Include="ei8.Cortex.Coding.Persistence" Version="0.1.1" />
+    <PackageReference Include="ei8.Cortex.Library.Client" Version="0.3.16" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Client" Version="0.1.8" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Common" Version="0.1.6" />
     <PackageReference Include="ei8.Data.Aggregate.Common" Version="0.1.1" />
@@ -25,13 +27,18 @@
     <PackageReference Include="ei8.Data.Tag.Common" Version="0.1.3" />
     <PackageReference Include="ei8.Data.Tag.Port.Adapter.In.InProcess" Version="0.1.11" />
     <PackageReference Include="ei8.EventSourcing.Client" Version="0.2.12" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection" Version="0.0.3" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization.Persistence" Version="0.0.2" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.Persistence" Version="0.0.5" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection" Version="0.0.6" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization" Version="0.0.2" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization.Persistence" Version="0.0.4" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.Persistence" Version="0.0.7" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Owin" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Owin" Version="6.0.36" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.8.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
     <PackageReference Include="Nancy.Serialization.JsonNet" Version="2.0.0-clinteastwood" />
