--- a/src/main/Port.Adapter/In/Api/In.Api.csproj
+++ b/src/main/Port.Adapter/In/Api/In.Api.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CqrsLite" Version="0.18.1" />
-    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.4" />
+    <PackageReference Include="ei8.Cortex.Chat.Common" Version="0.2.5" />
     <PackageReference Include="ei8.Cortex.Library.Client" Version="0.4.0" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Client" Version="0.1.8" />
     <PackageReference Include="ei8.Cortex.Subscriptions.Common" Version="0.1.6" />
@@ -21,9 +21,10 @@
     <PackageReference Include="ei8.Data.Mirror.Common" Version="0.1.0" />
     <PackageReference Include="ei8.Data.Tag.Common" Version="0.1.3" />
     <PackageReference Include="ei8.Extensions.DependencyInjection" Version="0.0.9" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization" Version="0.0.3" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization.Persistence" Version="0.0.6" />
-    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.Persistence" Version="0.0.8" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding" Version="0.0.2" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization" Version="0.0.4" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.d23.neurULization.Persistence" Version="0.0.7" />
+    <PackageReference Include="ei8.Extensions.DependencyInjection.Coding.Persistence" Version="0.0.9" />
     <PackageReference Include="ei8.Extensions.DependencyInjection.Cortex" Version="0.0.2" />
     <PackageReference Include="ei8.Extensions.DependencyInjection.EventSourcing" Version="0.0.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.6.0" />
