--- a/src/customSettings.json
+++ b/src/customSettings.json
@@ -1,112 +1,121 @@
 {
   "Mirrors": [
     {
-      "Key": "DirectObject",
+      "Keys": [ "DirectObject" ],
       "Url": "http://neurul.net/sample/cortex/neurons/c6e60d9e-14cc-4e72-823d-c00633b32f81"
     },
     {
-      "Key": "Has",
+      "Keys": [ "Has" ],
       "Url": "http://neurul.net/sample/cortex/neurons/fd8deb90-5553-447e-b3db-587f5b293dca"
     },
     {
-      "Key": "Instantiates",
+      "Keys": [ "Instantiates" ],
       "Url": "http://neurul.net/sample/cortex/neurons/3596c0af-aad1-48f3-8fcb-69a44772eed3"
     },
     {
-      "Key": "NominalSubject",
+      "Keys": [ "NominalSubject" ],
       "Url": "http://neurul.net/sample/cortex/neurons/e9d3077d-76c5-411d-99f4-3d844ee7334e"
     },
     {
-      "Key": "NominalModifier",
+      "Keys": [ "NominalModifier" ],
       "Url": "http://neurul.net/sample/cortex/neurons/773dcbf8-cae0-401d-a1e7-24dab9c44d6a"
     },
     {
-      "Key": "Of",
+      "Keys": [ "Of" ],
       "Url": "http://neurul.net/sample/cortex/neurons/31895b60-fce7-49cf-8c1a-3cad1136a453"
     },
     {
-      "Key": "Case",
+      "Keys": [ "Case" ],
       "Url": "http://neurul.net/sample/cortex/neurons/4061ade0-f1eb-4137-950b-974bd5cc33bc"
     },
     {
-      "Key": "Unit",
+      "Keys": [ "Unit" ],
       "Url": "http://neurul.net/sample/cortex/neurons/21f034c5-c176-4ffc-aa7b-a664e9f3a208"
     },
     {
-      "Key": "System.String",
+      "Keys": [ "System.String" ],
       "Url": "http://neurul.net/sample/cortex/neurons/4061ade1-f1eb-4137-950b-974bd5cc33be"
     },
     {
-      "Key": "System.Guid",
+      "Keys": [ "System.Guid" ],
       "Url": "http://neurul.net/sample/cortex/neurons/4061ade2-f1eb-4137-950b-974bd5cc33be"
     },
     {
-      "Key": "System.DateTimeOffset",
+      "Keys": [ "System.DateTimeOffset" ],
       "Url": "http://neurul.net/sample/cortex/neurons/4061ade3-f1eb-4137-950b-974bd5cc33be"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Avatars.Avatar",
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Avatars.Avatar" ],
       "Url": "http://neurul.net/sample/cortex/neurons/3fdf7e54-3387-49b2-83f5-4cdcadb8cda0"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Avatars.Avatar:Name",
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Avatars.Avatar:Name" ],
       "Url": "http://neurul.net/sample/cortex/neurons/075522a1-5f54-4e05-b0f7-3a3cb4a1b79b"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Message",
-      "Url": "http://neurul.net/sample/cortex/neurons/eb560ebc-57cd-4368-be30-c76c3f0eaf8b"
-    },
-    {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Message:ContentId",
-      "Url": "http://neurul.net/sample/cortex/neurons/c644448a-8aa7-4866-9ea3-61f42ddc512a"
-    },
-    {
-      "Key": "ei8.Cortex.Coding.Versioning.Creation",
+      "Keys": [
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Avatars.Avatar:CreationTimestamp",
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Message:CreationTimestamp"
+      ],
       "Url": "http://neurul.net/sample/cortex/neurons/7285bd12-be9d-4d87-8f8c-5379f425b6c4"
     },
     {
-      "Key": "ei8.Cortex.Coding.Versioning.Creation:SubjectId",
-      "Url": "http://neurul.net/sample/cortex/neurons/93c60f99-b9e8-4b30-8194-8fddbde87aa2"
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Message" ],
+      "Url": "http://neurul.net/sample/cortex/neurons/eb560ebc-57cd-4368-be30-c76c3f0eaf8b"
     },
     {
-      "Key": "ei8.Cortex.Coding.Versioning.Creation:Timestamp",
-      "Url": "http://neurul.net/sample/cortex/neurons/ceb945d7-8a0c-43f4-b637-8807d651562b"
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Message:ContentId" ],
+      "Url": "http://neurul.net/sample/cortex/neurons/c644448a-8aa7-4866-9ea3-61f42ddc512a"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender",
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender" ],
       "Url": "http://neurul.net/sample/cortex/neurons/80e3ba87-3061-4aa7-9d97-218452510fb7"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender:MessageId",
+      "Keys": [
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender:MessageId",
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient:MessageId"
+      ],
       "Url": "http://neurul.net/sample/cortex/neurons/ea830bb8-254a-46c1-8293-317756d837cd"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender:AvatarId",
+      "Keys": [
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Sender:AvatarId",
+        "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient:AvatarId"
+      ],
       "Url": "http://neurul.net/sample/cortex/neurons/5aef4479-6cba-42fb-aa43-980b0a06d5b6"
     },
     {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient",
+      "Keys": [ "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient" ],
       "Url": "http://neurul.net/sample/cortex/neurons/573b9770-fb16-4377-9a41-85321c07aa35"
-    },
-    {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient:MessageId",
-      "Url": "http://neurul.net/sample/cortex/neurons/6998b0e0-673a-441f-a820-c4026cb2ff5c"
-    },
-    {
-      "Key": "ei8.Cortex.Chat.Nucleus.Domain.Model.Messages.Recipient:AvatarId",
-      "Url": "http://neurul.net/sample/cortex/neurons/247a4341-12e5-47ac-b6ae-de2ec6f2e20f"
     }
     // TODO: Repurpose
     // {
-    //   "Key": "Simple",
+    //   "Keys": [ "" ],
+    //   "Url": "http://neurul.net/sample/cortex/neurons/93c60f99-b9e8-4b30-8194-8fddbde87aa2"
+    // },
+    // {
+    //   "Keys": [ "" ],
+    //   "Url": "http://neurul.net/sample/cortex/neurons/ceb945d7-8a0c-43f4-b637-8807d651562b"
+    // }
+    // {
+    //   "Keys": [],
+    //   "Url": "http://neurul.net/sample/cortex/neurons/247a4341-12e5-47ac-b6ae-de2ec6f2e20f"
+    // }
+    // {
+    //   "Keys": [],
+    //   "Url": "http://neurul.net/sample/cortex/neurons/6998b0e0-673a-441f-a820-c4026cb2ff5c"
+    // }
+    // {
+    //   "Keys": [ "Simple",
     //   "Url": "http://neurul.net/sample/cortex/neurons/4061ade0-f1eb-4137-950b-974bd5cc33bd"
     // },
     // {
-    //   "Key": "Coordination",
+    //   "Keys": [ "Coordination",
     //   "Url": "http://neurul.net/sample/cortex/neurons/4061ade0-f1eb-4137-950b-974bd5cc33be"
     // },
     // {
-    //   "Key": "Unread",
+    //   "Keys": [ "Unread",
     //   "Url": "http://neurul.net/sample/cortex/neurons/1753e83e-e81c-4220-930a-4253e32239cb"
     // },
   ],
